--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,9 @@
 [UNSPLASH]
-USER_URL = 'https://api.unsplash.com/users/'
-COLLECTION_URL = 'https://api.unsplash.com/collections/'
-# access key from unsplash.com
 ACCESS_KEY =
+
+[TWITTER]
+CONSUMER_SECRET = 
+CONSUMER_KEY = 
+ACCESS_TOKEN_SECRET = 
+ACCESS_TOKEN = 
+BEARER_TOKEN = 
